--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ body.modal-open #addCardMenu{display:none;}
 .modal-add button:hover{background:rgba(26,115,232,.2)}
 
 /* Inventory row styles */
-.inv-row{display:grid;grid-template-columns:1fr auto;align-items:center;padding:6px 10px;border-radius:8px;cursor:pointer;transition:background .2s}
+.inv-row{display:grid;grid-template-columns:1fr auto;align-items:center;padding:6px 10px;border-radius:8px;cursor:pointer;transition:background .2s;column-gap:18px}
 .inv-row:nth-child(odd){background:#fafbfc}
 .inv-row:nth-child(even){background:#f2f5f8}
 .inv-row.active{background:#e8f0ff;font-weight:600}
@@ -473,9 +473,10 @@ body.modal-open #addCardMenu{display:none;}
 .attune-pill.on{background:#1a73e8;color:#fff}
 
 /* Common item toggle */
-.common-chip{appearance:none;border:1px solid rgba(148,163,184,.4);background:#fff;color:#475569;border-radius:999px;padding:2px 10px;font-size:10px;font-weight:700;text-transform:uppercase;letter-spacing:.08em;cursor:pointer;user-select:none;transition:background var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease)}
-.common-chip:hover,.common-chip:focus-visible{border-color:rgba(26,115,232,.4);color:#1a73e8;outline:none}
-.common-chip.on{background:#1a73e8;color:#fff;border-color:#1a73e8}
+.common-chip{appearance:none;display:inline-flex;align-items:center;justify-content:center;width:26px;height:26px;border:1px solid rgba(148,163,184,.45);background:#fff;color:#475569;border-radius:50%;padding:0;font-size:12px;font-weight:700;text-transform:none;letter-spacing:0;line-height:1;cursor:pointer;user-select:none;transition:background var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease)}
+.common-chip>[aria-hidden]{display:inline-flex;align-items:center;justify-content:center;width:100%;height:100%}
+.common-chip:hover,.common-chip:focus-visible{border-color:#94a3b8;color:#1f2937;outline:none}
+.common-chip.on{background:#334155;color:#fff;border-color:#334155}
 .common-chip:focus-visible{outline:2px solid rgba(26,115,232,.35);outline-offset:2px}
 
 /* Consumables qty controls */
@@ -3892,7 +3893,7 @@ function openInventoryModal(charKey, opts={}){
     const commonChip=document.createElement('button');
     commonChip.type='button';
     commonChip.className='common-chip'+(isCommon?' on':'');
-    commonChip.textContent='Common';
+    commonChip.innerHTML='<span aria-hidden="true">C</span><span class="sr-only">Common</span>';
     commonChip.setAttribute('aria-pressed', isCommon?'true':'false');
     commonChip.title=isCommon
       ?'Marked as common. Common items do not count against the active limit.'
